fix displayng subapges on mobile

--- a/src/components/Animations/Animations.css
+++ b/src/components/Animations/Animations.css
@@ -1,7 +1,6 @@
 .Animation {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: minmax(80px, 100px) auto;
+    grid-template-columns: 1fr;
     grid-gap: 20px;
     margin: 20px;
     margin-bottom: 0;
@@ -38,4 +37,11 @@
     justify-content: flex-end;
     align-items: center;
     border-radius: 5px;
+}
+
+@media (min-width: 768px) {
+    .Animation {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: minmax(80px, 100px) auto;
+    }
 }
