--- a/src/components/Borders/Borders.css
+++ b/src/components/Borders/Borders.css
@@ -1,7 +1,6 @@
 .Borders {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 50px auto;
+    grid-template-columns: 1fr;
     grid-gap: 20px;
     margin: 20px;
     margin-bottom: 0;
@@ -16,4 +15,11 @@
     font-size: 1rem;
     color: rgba(114, 113, 113, 0.7);
     text-transform: lowercase;
+}
+
+@media (min-width: 768px) {
+    .Borders {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 50px auto;
+    }
 }
