--- a/src/components/Buttons/Button/Button.css
+++ b/src/components/Buttons/Button/Button.css
@@ -1,5 +1,5 @@
 .btn {
-    margin: 0 5px;
+    margin: 0;
     color: white;
     border: none;
     padding: 10px;
@@ -14,6 +14,7 @@
 }
 
 .btn-circle {
+    margin: 5px;
     border-radius: 50%;
     width: 40px;
     height: 40px;
@@ -113,4 +114,13 @@
 
 .btn-split.btn-light div {
     background-color: #bfc0c5;
+}
+
+@media (min-width: 768px) {
+    .btn {
+        margin: 0 5px;
+    }
+    .btn-circle {
+        margin: 0;
+    }
 }
