--- a/src/components/Buttons/Buttons.css
+++ b/src/components/Buttons/Buttons.css
@@ -1,7 +1,6 @@
 .Buttons {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto 1fr;
+    grid-template-columns: 1fr;
     grid-gap: 20px;
     margin: 20px;
     margin-bottom: 0;
@@ -38,4 +37,11 @@ p.danger {
     flex-direction: column;
     gap: 10px;
     align-items: flex-start;
+}
+
+@media (min-width: 768px) {
+    .Buttons {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto 1fr;
+    }
 }
