--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,7 +1,5 @@
 .Cards {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto auto 1fr;
+    grid-template-columns: 1fr;
     grid-gap: 20px;
     margin: 20px;
     margin-bottom: 0;
@@ -18,4 +16,12 @@
 
 .Cards__side-b {
     grid-column: 3/-1;
+}
+
+@media (min-width: 768px) {
+    .Cards {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: auto auto 1fr;
+    }
 }
